added create game post request

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <!-- Code along modal -->
           <!-- Button trigger modal -->
           <div class="game-buttons">
-            <button id="startGame">Start Game</button>
+            <button id="start-game">Start Game</button>
             <button id="resetBtn">Rest Game</button>
         </div>
           <div class="b-out">
