--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      <!-- <script src="./app/auth/logic.js" defer></script> -->
     </head>
     <body>
-      <video src="./public/Background - 25552.mp4" loop autoplay></video>
-      <audio src="./public/2017-11-15_-_Super_Hero_Showdown_-_David_Fesliyan.mp3" loop autoplay></audio>
+      <video src="public/Background - 25552.mp4" loop autoplay></video>
+      <audio src="public/2017-11-15_-_Super_Hero_Showdown_-_David_Fesliyan.mp3" loop autoplay></audio>
       <section id="before-sign-in">
         <h1>Tic Tac Death</h1>
         <h2> Care To Play A Game?</h2>
