--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
      <!-- <script src="./app/auth/logic.js" defer></script> -->
     </head>
     <body>
-      <video src="./public/Background - 25552.mp4" loop autoplay></video>
-      <audio src="./public/2017-11-15_-_Super_Hero_Showdown_-_David_Fesliyan.mp3" loop autoplay></audio>
+      <video loop autoplay>
+        <source src="./public/Background - 25552.mp4" type="video/mp4">
+      </video>
+      <!-- <audio id="myAudio" src="./public/2017-11-15_-_Super_Hero_Showdown_-_David_Fesliyan.mp3" loop autoplay></audio>
+   --> <audio controls loop autoplay>
+     <source src="/public/2017-11-15_-_Super_Hero_Showdown_-_David_Fesliyan.mp3" type="audio/mpeg"> 
+    </audio>
       <section id="before-sign-in">
         <h1>TIC TAC TOE</h1>
         <h2> Care To Play A Game?</h2>
