added chrome extension

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>TicTacDeath</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
+      <meta http-equiv="X-UA-Compatible" content="IE=chrome=1">
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
