--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <!-- <script src="./app/auth/logic.js" defer></script> -->
     </head>
     <body>
-      <!-- <video src="./public/Background - 25552.mp4" loop autoplay></video> -->
+      <video src="./public/Background - 25552.mp4" loop autoplay></video>
   
       <!-- <video autoplay loop loop="true">
         <source src="./public/Background - 25552.mp4" type="video/mp4">
